--- a/app/ui/dashboard/sidebar/sidebar.module.css
+++ b/app/ui/dashboard/sidebar/sidebar.module.css
@@ -40,9 +40,22 @@
     margin: 10px 0;
 }
 
+.logout {
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 5px 0px;
+    border-radius: 10px;
+    background: none;
+    border: none;
+    color: white;
+    width: 100%;
+}
 
-
-
+.logout:hover {
+    background-color: #2e374a;
+}
 
 
 
